--- a/src/Fable.Bun.Sample/Fable.Bun.Sample.fsproj
+++ b/src/Fable.Bun.Sample/Fable.Bun.Sample.fsproj
@@ -6,6 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Extensions.fs" />
+    <Compile Include="Types.fs" />
+    <Compile Include="Bix.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
