--- a/src/Bix/Bix.fsproj
+++ b/src/Bix/Bix.fsproj
@@ -1,20 +1,21 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <Compile Include="Types.fs" />
-        <Compile Include="Extensions.fs" />
-        <Compile Include="Router.fs" />
-        <Compile Include="Bix.fs" />
-    </ItemGroup>
-    <ItemGroup>
-        <ProjectReference Include="..\Fable.Bun\Fable.Bun.fsproj" />
-    </ItemGroup>
-    <ItemGroup>
-        <PackageReference Include="Fable.Browser.Url" Version="1.1.0" />
-        <PackageReference Include="Fable.Core" Version="3.7.1" />
-    </ItemGroup>
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+  <ItemGroup>
+    <Compile Include="URLPattern.fs" />
+    <Compile Include="Types.fs" />
+    <Compile Include="Extensions.fs" />
+    <Compile Include="Handlers.fs" />
+    <Compile Include="Bix.fs" />
+    <Compile Include="Router.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Fable.Bun\Fable.Bun.fsproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Fable.Browser.Url" Version="1.1.0" />
+    <PackageReference Include="Fable.Core" Version="3.7.1" />
+  </ItemGroup>
 </Project>
