- add deno projects - move browser definitions - add run config for deno

--- a/src/Fable.Bun/Fable.Bun.fsproj
+++ b/src/Fable.Bun/Fable.Bun.fsproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Fable.Fetch" Version="2.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bix.Browser.Types\Bix.Browser.Types.fsproj" />
+  </ItemGroup>
+
 </Project>
