--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "ISC",
   "scripts": {
     "prestart": "bun install && dotnet tool restore",
-    "start": "dotnet fable watch src/Fable.Bun.Sample -s -o dist/Fable.Bun.Sample --runWatch bun ./dist/Fable.Bun.Sample/Program.js"
+    "start": "dotnet fable watch src/Bix.Bun.Sample -s -o dist/Bix.Bun.Sample --runWatch bun ./dist/Bix.Bun.Sample/Program.js",
+    "prestart:deno": "dotnet tool restore",
+    "start:deno": "bun prestart:deno && dotnet fable watch src/Bix.Deno.Sample -s -o dist/Bix.Deno.Sample --run deno run -A --watch=./dist/Bix.Deno.Sample/ ./dist/Bix.Deno.Sample/Program.js"
   },
   "dependencies": {
     "urlpattern-polyfill": "~5.0.3"
