--- a/src/Bix.Bun.Sample/Bix.Bun.Sample.fsproj
+++ b/src/Bix.Bun.Sample/Bix.Bun.Sample.fsproj
@@ -8,8 +8,7 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Bix\Bix.fsproj" />
-    <ProjectReference Include="..\Fable.Bun\Fable.Bun.fsproj" />
+    <ProjectReference Include="..\Bix.Bun\Bix.Bun.fsproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Feliz.ViewEngine" Version="0.24.0" />
