add versioning and publish stuff

--- a/src/Bix/Bix.fsproj
+++ b/src/Bix/Bix.fsproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <Version>1.0.0-beta-001</Version>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Types.fs" />
@@ -9,6 +10,9 @@
     <Compile Include="Handlers.fs" />
     <Compile Include="Bix.fs" />
     <Compile Include="Router.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="*.fsproj; *.fs;" PackagePath="fable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bix.Browser.Types\Bix.Browser.Types.fsproj" />
