--- a/src/Bix.Browser.Types/Bix.Browser.Types.fsproj
+++ b/src/Bix.Browser.Types/Bix.Browser.Types.fsproj
@@ -3,18 +3,27 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <Version>1.0.0-beta-001</Version>
+    <NpmDependencies>
+      <NpmPackage Name="urlpattern-polyfill" Version="gte 5.0.3" ResolutionStrategy="Max" />
+    </NpmDependencies>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="URLPattern.fs" />
     <Compile Include="BixBrowserTypes.fs" />
   </ItemGroup>
+
   <ItemGroup>
-    <PackageReference Include="Fable.Browser.Blob" Version="1.2.0" />
-    <PackageReference Include="Fable.Browser.Event" Version="1.5.0" />
-    <PackageReference Include="Fable.Fetch" Version="2.4.0" />
-    <PackageReference Include="Fable.Browser.Url" Version="1.1.0" />
-    <PackageReference Include="Fable.Core" Version="3.7.1" />
+    <Content Include="*.fsproj; *.fs;" PackagePath="fable\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Fable.Browser.Blob" Version="$(FableBrowserBlob)" />
+    <PackageReference Include="Fable.Browser.Event" Version="$(FableBrowserEvent)" />
+    <PackageReference Include="Fable.Browser.Url" Version="$(FableBrowserUrl)" />
+    <PackageReference Include="Fable.Fetch" Version="$(FableFetch)" />
+    <PackageReference Include="Fable.Core" Version="$(FableCore)" />
   </ItemGroup>
 
 </Project>
