--- a/src/Bix.Bun/Bix.Bun.fsproj
+++ b/src/Bix.Bun/Bix.Bun.fsproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <Version>1.0.0-beta-001</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,8 +12,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="*.fsproj; *.fs;" PackagePath="fable\" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Bix\Bix.fsproj" />
     <ProjectReference Include="..\Fable.Bun\Fable.Bun.fsproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Fable.Core" Version="$(FableCore)" />
   </ItemGroup>
 
 </Project>
