--- a/src/Fable.Deno/Fable.Deno.fsproj
+++ b/src/Fable.Deno/Fable.Deno.fsproj
@@ -3,16 +3,21 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <Version>1.0.0-beta-001</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="Deno.fs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="*.fsproj; *.fs;" PackagePath="fable\" />
+  </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fable.Browser.Blob" Version="1.2.0" />
-    <PackageReference Include="Fable.Browser.Event" Version="1.5.0" />
-    <PackageReference Include="Fable.Fetch" Version="2.4.0" />
+    <PackageReference Include="Fable.Browser.Blob" Version="$(FableBrowserBlob)" />
+    <PackageReference Include="Fable.Browser.Event" Version="$(FableBrowserEvent)" />
+    <PackageReference Include="Fable.Fetch" Version="$(FableFetch)" />
+    <PackageReference Include="Fable.Core" Version="$(FableCore)" />
   </ItemGroup>
 
   <ItemGroup>
