--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -23,6 +23,7 @@
     </ItemGroup>
     <PropertyGroup>
         <FableBrowserBlob>1.2.0</FableBrowserBlob>
+        <FableBrowserWebSocket>1.2.0</FableBrowserWebSocket>
         <FableBrowserEvent>1.5.0</FableBrowserEvent>
         <FableBrowserUrl>1.1.0</FableBrowserUrl>
         <FableFetch>2.5.0</FableFetch>
