--- a/src/Bix/Bix.fsproj
+++ b/src/Bix/Bix.fsproj
@@ -15,6 +15,15 @@
     <Content Include="*.fsproj; *.fs;" PackagePath="fable\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Bix.Browser.Types\Bix.Browser.Types.fsproj" />
+    <PackageReference Include="Fable.Browser.Blob" Version="$(FableBrowserBlob)" />
+    <PackageReference Include="Fable.Browser.Event" Version="$(FableBrowserEvent)" />
+    <PackageReference Include="Fable.Browser.Url" Version="$(FableBrowserUrl)" />
+    <PackageReference Include="Fable.Browser.WebSocket" Version="$(FableBrowserWebSocket)" />
+    <PackageReference Include="Fable.Fetch" Version="$(FableFetch)" />
+    <PackageReference Include="Fable.Core" Version="$(FableCore)" />
   </ItemGroup>
+    <ItemGroup>
+    <ProjectReference Include="..\Fable.URLPattern\Fable.URLPattern.fsproj" />
+  </ItemGroup>
+
 </Project>
