--- a/src/Bix.Bun/Bix.Bun.fsproj
+++ b/src/Bix.Bun/Bix.Bun.fsproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <DefineConstants>$(DefineConstants);ENABLE_URLPATTERN_POLYFILL</DefineConstants>
     <Version>1.0.0-beta-001</Version>
   </PropertyGroup>
 
@@ -16,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Fable.URLPattern\Fable.URLPattern.fsproj" />
     <ProjectReference Include="..\Bix\Bix.fsproj" />
     <ProjectReference Include="..\Fable.Bun\Fable.Bun.fsproj" />
   </ItemGroup>
