--- a/src/Fable.URLPattern/Fable.URLPattern.fsproj
+++ b/src/Fable.URLPattern/Fable.URLPattern.fsproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <Version>1.0.0-beta-001</Version>
+    <Version>1.0.0</Version>
     <NpmDependencies>
       <NpmPackage Name="urlpattern-polyfill" Version="gte 5.0.3" ResolutionStrategy="Max" />
     </NpmDependencies>
@@ -11,7 +11,6 @@
 
   <ItemGroup>
     <Compile Include="URLPattern.fs" />
-    <Compile Include="BixBrowserTypes.fs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,11 +18,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fable.Browser.Blob" Version="$(FableBrowserBlob)" />
-    <PackageReference Include="Fable.Browser.Event" Version="$(FableBrowserEvent)" />
-    <PackageReference Include="Fable.Browser.Url" Version="$(FableBrowserUrl)" />
-    <PackageReference Include="Fable.Browser.WebSocket" Version="$(FableBrowserWebSocket)" />
-    <PackageReference Include="Fable.Fetch" Version="$(FableFetch)" />
     <PackageReference Include="Fable.Core" Version="$(FableCore)" />
   </ItemGroup>
 
