--- a/src/Fable.Bun.fsproj
+++ b/src/Fable.Bun.fsproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <Version>1.0.0-beta-001</Version>
+    <Version>0.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,9 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fable.Browser.Blob" Version="$(FableBrowserBlob)" />
-    <PackageReference Include="Fable.Browser.Event" Version="$(FableBrowserEvent)" />
-    <PackageReference Include="Fable.Fetch" Version="$(FableFetch)" />
-    <PackageReference Include="Fable.Core" Version="$(FableCore)" />
+    <PackageReference Include="Fable.Browser.Blob" Version="1.2.0" />
+    <PackageReference Include="Fable.Browser.Event" Version="1.5.0" />
+    <PackageReference Include="Fable.Fetch" Version="2.6.0" />
+    <PackageReference Include="Fable.Core" Version="3.7.1" />
   </ItemGroup>
 </Project>
