--- a/src/Fable.Bun.fsproj
+++ b/src/Fable.Bun.fsproj
@@ -4,7 +4,27 @@
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Version>0.1.0</Version>
+    <PackageProjectUrl>https://github.com/AngelMunoz/fable-bun</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/AngelMunoz/fable-bun.git</RepositoryUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageTags>fsharp;fable;javascript;f#;js;deno;bun;</PackageTags>
+    <Authors>Angel Daniel Munoz Gonzalez</Authors>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+
+    <!-- For SourceLink. See: https://github.com/dotnet/sourcelink#using-source-link-in-net-projects -->
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+  <ItemGroup>
+      <None Include="$(MSBuildThisFileDirectory)\..\LICENSE" Pack="true" Visible="false" PackagePath=""/>
+      <None Include="$(MSBuildThisFileDirectory)\..\README.md" Pack="true" Visible="false" PackagePath=""/>
+  </ItemGroup>
+  <ItemGroup>
+      <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
 
   <ItemGroup>
     <Compile Include="Bun.fs" />
